# waybar-helper

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
args-helper/: Cargo.toml
args-helper/src/: args_helper.rs  lib.rs
src/: main.rs
waybar-helper/: Cargo.toml
waybar-helper/src/: main.rs
