[package]
name = "waybar-helper"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
async-std = { version = "1.13.2", features = ["attributes"] }
ctrlc-async = "3.2.2"
futures-util = "0.3.31"
swayipc-async = "3.0.0"
